# kinect_guard

./: CMakeLists.txt
cmake/: FindFreenect.cmake  FindZeroMQ.cmake
src/: CMakeLists.txt  main.c  main.cc
