CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(kinect_guard)

SET(CMAKE_MODULE_PATH cmake)

FIND_PACKAGE(Freenect)
FIND_PACKAGE(ZeroMQ)

MESSAGE(${ZeroMQ_LIBRARY})
MESSAGE(${ZeroMQ_INCLUDE_DIR})

INCLUDE_DIRECTORIES(
  ${Freenect_INCLUDE_DIR}
  ${ZeroMQ_INCLUDE_DIR}
)

ADD_SUBDIRECTORY(src)

FILE(GLOB SRCS src/*.cc)

ADD_EXECUTABLE(kinect_guard ${SRCS})

TARGET_LINK_LIBRARIES(kinect_guard
  ${ZeroMQ_LIBRARY}
  ${Freenect_LIBRARY}
)

